--- a/seller/PushlaSeller/app/build.gradle
+++ b/seller/PushlaSeller/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "pushla.com.pushlaseller"
-        minSdkVersion 8
+        minSdkVersion 12
         targetSdkVersion 20
         versionCode 1
         versionName "1.0"
@@ -21,5 +21,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    repositories {
+        mavenCentral()
+    }
     compile 'com.android.support:appcompat-v7:20.0.0'
+    //compile 'com.google.android.gms:play-services:5.2.08'
 }
